<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/liner_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@drawable/gradient8"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:id="@+id/my_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/my_frame"
            android:alpha="1"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/card_rate_app"

                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_preview_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:src="@drawable/white_fav"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/action_rate"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:visibility="visible" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_more_app"

                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_more_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:src="@drawable/glory_abd_grad"
                        android:visibility="visible"
                        app:srcCompat="@drawable/more_apps" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/more_apps"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:visibility="visible" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_policy_privacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_preview_share_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_lock" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"

                            android:gravity="center"
                            android:text="@string/policy_privacy"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_share_app"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_preview_share_whats"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/share_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"

                            android:gravity="center"
                            android:text="@string/share_this_app"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_back"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_back_me"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"

                        android:src="@drawable/ic_close" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/exit"
                        android:textAlignment="center"
                        android:textColor="@color/background"
                        android:textSize="20sp"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>