<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:id="@+id/linear_layout_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/abd_grad"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:lines="2"
            android:minLines="2"
            android:text="@string/rate_our_app_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/AppCompatRatingBar_dialog_rating_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_layout_user"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_gray"
            android:elevation="20dp"
            android:foregroundTint="#0596E4"
            android:indeterminateTint="#9575CD"
            android:progressBackgroundTint="#F8F3CA"
            android:progressTint="#BA68C8"
            android:rating="0"
            android:secondaryProgressTint="@color/gray_color"
            android:stepSize="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_rate_now"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/rate_now"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_later"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:clickable="true"
                android:text="@string/later"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:background="@drawable/bg_dialog"
        android:id="@+id/linear_layout_feedback"
        android:visibility="gone"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="18dp"
            android:lines="1"
            android:gravity="center|left"
            android:text="Feedback"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edit_text_feed_back"
            android:inputType="textMultiLine"
            android:lines="4"
            android:padding="10dp"
            android:gravity="top|left"
            android:hint="Write feedback ..."
            android:textColor="@color/primary_text"
            android:background="@drawable/bg_dialog"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_cancel"
                android:textStyle="bold"
                android:text="Cancel"
                android:textColor="@color/primary_text_light"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/buttun_send_feedback"
                android:textStyle="bold"
                android:text="Submit"
                android:textColor="@color/blue"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>