<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:gl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/afters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false">

        <ImageView
            android:id="@+id/top_img2_space_bark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/mm0" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha=".9"
        android:orientation="vertical"
        android:paddingTop="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_singer_space_bark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/quot_logo"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/purple_700"
                android:gravity="bottom|center"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:padding="40dp">


                <androidx.cardview.widget.CardView
                    android:id="@+id/mycardd_space_bark"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layoutDirection="rtl"
                    android:padding="10dp"
                    app:cardBackgroundColor="@color/error_stroke_color"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/liner_start_listn_space_bark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageButton
                            android:id="@+id/imageButton3"
                            android:layout_width="40dp"
                            android:layout_height="30dp"
                            android:background="@color/transparent"
                            android:scaleType="centerInside"
                            android:src="@drawable/glory_menu_icons" />

                        <TextView
                            android:id="@+id/txt_start_lsitn_space_bark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/tajawalbold"
                            android:gravity="center"
                            android:text="@string/open_app"
                            android:textColor="@color/sweet_dialog_bg_color"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_police_space_bark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:fontFamily="@font/tajawalbold"
                        android:gravity="center"
                        android:paddingBottom="20dp"
                        android:text="@string/policycontent"
                        android:textColor="@color/browser_actions_bg_grey"
                        android:textSize="14sp"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@color/transparent"

                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:orientation="horizontal">


                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_app_name_space_bark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>